--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -69,7 +69,7 @@ jobs:
           ${{ inputs.suite }}
         id: ecosystem-ci-run
       - if: always()
-        run: pnpm tsx discord-webhook.ts
+        run: pnpm tsx slack-webhook.ts
         env:
           WORKFLOW_NAME: ci-selected
           REF_TYPE: ${{ inputs.refType }}
@@ -77,5 +77,5 @@ jobs:
           REPO: ${{ inputs.repo }}
           SUITE: ${{ inputs.suite }}
           STATUS: ${{ job.status }}
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
