--- a/.github/workflows/ecosystem-ci.yml
+++ b/.github/workflows/ecosystem-ci.yml
@@ -11,6 +11,7 @@ on:
     - cron: "0 5 * * 1,3,5" # monday,wednesday,friday 5AM
   repository_dispatch:
     types: [ecosystem-ci]
+  workflow_dispatch:
 jobs:
   test-ecosystem:
     timeout-minutes: 30
