--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -41,7 +41,7 @@ jobs:
         continue-on-error: true
       - run: corepack enable
       - run: pnpm --version
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --prefer-frozen-lockfile
       - run: >-
           pnpm tsx ecosystem-ci.ts
           ${{ inputs.suite }}
