--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "format": "prettier --ignore-path .gitignore --check .",
     "format:fix": "pnpm format --write",
     "test:self": "tsx ecosystem-ci.ts _selftest",
-    "test": "tsx ecosystem-ci.ts",
-    "bisect": "tsx ecosystem-ci.ts bisect"
+    "test": "tsx ecosystem-ci.ts"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false"
