--- a/.github/workflows/ecosystem-ci.yml
+++ b/.github/workflows/ecosystem-ci.yml
@@ -43,7 +43,7 @@ jobs:
         continue-on-error: true
       - run: corepack enable
       - run: pnpm --version
-      - run: pnpm i --prefer-frozen-lockfile
+      - run: pnpm i --frozen-lockfile
       - run: >-
           pnpm tsx ecosystem-ci.ts
           ${{ matrix.suite }}
