--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint:fix": "pnpm lint --fix",
     "format": "prettier --ignore-path .gitignore --check .",
     "format:fix": "pnpm format --write",
-    "test": "tsx ecosystem-ci.ts"
+    "test-ci": "tsx ecosystem-ci.ts",
+    "test": "node test.js"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false"
@@ -38,9 +39,11 @@
   "homepage": "https://github.com/nrwl/nx-ecosystem-ci#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@clack/prompts": "^0.6.3",
     "cac": "^6.7.14",
     "execa": "^7.1.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "picocolors": "^1.0.0"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.3",
