--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
   "devDependencies": {
     "@antfu/ni": "^0.21.3",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^18.16.5",
     "@types/semver": "^7.3.13",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.40.0",
     "eslint-define-config": "^1.20.0",
     "eslint-plugin-n": "^15.7.0",
