--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^18.16.5",
     "@types/semver": "^7.3.13",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
