feat(tests): add nxext plugin tests for vue, solid, capacitor, ionic-angular and ionic-react

--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -23,6 +23,11 @@ on:
           - nx-remix
           - nx-rspack
           - nxext-svelte
+          - nxext-solid
+          - nxext-vue
+          - nxext-capacitor
+          - nxext-ionic-angular
+          - nxext-ionic-react
           - qwik-nx
 jobs:
   execute-selected-suite:
