--- a/.github/workflows/ecosystem-ci.yml
+++ b/.github/workflows/ecosystem-ci.yml
@@ -28,6 +28,11 @@ jobs:
           - nx-remix
           - nx-rspack
           - nxext-svelte
+          - nxext-solid
+          - nxext-vue
+          - nxext-capacitor
+          - nxext-ionic-angular
+          - nxext-ionic-react
           - qwik-nx
       fail-fast: false
     steps:
