feat(tests): add tests for @nxext/stencil

--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -24,6 +24,7 @@ on:
           - nx-rspack
           - nxext-svelte
           - nxext-solid
+          - nxext-stencil
           - nxext-vue
           - nxext-capacitor
           - nxext-ionic-angular
