fix: update monodon-rust file and add rust to the ci

--- a/.github/workflows/ecosystem-ci.yml
+++ b/.github/workflows/ecosystem-ci.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           node-version: 18
         id: setup-node
+      - uses: dtolnay/rust-toolchain@stable
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
